# TPG-Taller-Worms2D

./: .gitignore  CMakeLists.txt  README.md  install.sh  worms2D.sh  worms2Dserver.sh
client/: Action.cpp  Action.h  ActorHolder.cpp  ActorHolder.h  AimAnimation.cpp  AimAnimation.h  Animation.cpp  Animation.h  GameActor.h  LevelActors.h  SpecialToolAnimation.h  TeamResourcesHolder.cpp  TeamResourcesHolder.h  TerrainHolder.cpp  TerrainHolder.h  TexturesPool.cpp  TexturesPool.h  ToolAnimationHolder.cpp  ToolAnimationHolder.h  WeaponAnimation.cpp  WeaponAnimation.h  WeaponAnimationHolder.cpp  WeaponAnimationHolder.h  Window.cpp  Window.h  audio_player.cpp  audio_player.h  camera.cpp  camera.h  cheatmenu.cpp  cheatmenu.h  cheatmenu.ui  client.cpp  client.h  client_event_loop.cpp  client_event_loop.h  command_dto.cpp  command_dto.h  cparser.cpp  cparser.h  (+25 more)
client/resources/: images.qrc  sounds.qrc
common/: BattlefieldGameState.cpp  BattlefieldGameState.h  GameState.cpp  GameState.h  States.cpp  States.h  WormGameState.cpp  WormGameState.h  command.cpp  command.h  config.cpp  config.h  const.h  dto.cpp  dto.h  logger.cpp  logger.h  position.cpp  position.h  queue.h  socket.cpp  thread.h  vector2d.h
docs/: Technical-Manual.md  formatos.md
docs/diagrams/: game_arch.plantuml  recvAction.plantuml
server/: Game.cpp  Game.h  Player.cpp  Player.h  acceptor.cpp  acceptor.h  bar.cpp  bar.h  battlefield.cpp  battlefield.h  broadcaster.cpp  broadcaster.h  cleaner.cpp  cleaner.h  command.cpp  command.h  contact_listener.cpp  contact_listener.h  crate.cpp  crate.h  crate_type.cpp  crate_type.h  engine.cpp  engine.h  entity.cpp  entity.h  gadget.cpp  gadget.h  game.cpp  game.h  game_browser.cpp  game_browser.h  game_loop.cpp  game_loop.h  info_parser.cpp  info_parser.h  level_holder.cpp  level_holder.h  lobby.cpp  lobby.h  (+32 more)
yaml/: client_const.yaml  common_const.yaml  level-bars.yaml  player_names.yaml  server_const.yaml  spawn_points.yaml
